[py] Fix `pyproject.toml` for installable from sdist (#14806)
* [ci][py] Add rules validate-pyproject

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

* [py] Bump version to 4.27.1

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

* Update CHANGELOG

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

---------

Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>
Co-authored-by: Diego Molina <diemol@users.noreply.github.com>

--- a/py/CHANGES
+++ b/py/CHANGES
@@ -1,3 +1,7 @@
+Selenium 4.27.1
+* Fix `pyproject.toml` for installable from sdist (#14806)
+* Revert the Deprecation warnings of WebElement.get_attribute() (#14808)
+
 Selenium 4.27.0
 * Add CDP for Chrome 131 and remove 128
 * Add Firefox CDP deprecation warnings (#14787)
